<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true" >

    <RelativeLayout
        android:id="@+id/layout_top"
        android:layout_width="fill_parent"
        android:layout_height="48dip"
        android:layout_alignParentTop="true"
        android:background="@color/main_bg_color" >

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="35dip"
            android:layout_height="35dip"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dip"
            android:onClick="chooseBack"
            android:scaleType="center"
            android:src="@drawable/back_white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:text="@string/choose_picture"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/btn_ok"
            android:layout_width="55dip"
            android:layout_height="35dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dip"
            android:gravity="center"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </RelativeLayout>

    <GridView
        android:id="@+id/id_gridView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/layout_top"
        android:cacheColorHint="@android:color/transparent"
        android:clipChildren="true"
        android:gravity="center"
        android:horizontalSpacing="3dip"
        android:listSelector="@android:color/transparent"
        android:numColumns="3"
        android:stretchMode="columnWidth"
        android:verticalSpacing="3dip" >
    </GridView>

    <RelativeLayout
        android:id="@+id/id_bottom_ly"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:layout_alignParentBottom="true"
        android:background="#e0000000"
        android:clickable="true" >

        <TextView
            android:id="@+id/id_choose_dir"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:paddingLeft="10dip"
            android:text="@string/all_pictures"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/choose_count"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="2dip"
            android:layout_marginRight="5dip"
            android:gravity="center"
            android:text="0"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/has_choose_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/choose_count"
            android:gravity="center"
            android:text="@string/has_choose"
            android:textColor="@android:color/white" />
    </RelativeLayout>

</RelativeLayout>