<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:descendantFocusability="blocksDescendants"
    android:gravity="center_vertical"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/good_iv"
        android:layout_width="120dip"
        android:layout_height="120dip"
        android:layout_marginStart="5dip"
        android:scaleType="centerCrop"
        android:src="@drawable/default_image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dip" >

        <TextView
            android:id="@+id/good_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="2"
            android:text="@string/mall"
            android:textColor="@color/item_font_color"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="3dip"
                android:paddingTop="3dip"
                android:text="￥"
                android:textColor="@color/red"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/good_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="3dip"
                android:paddingTop="3dip"
                android:text="888"
                android:textColor="@color/red"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/buyBtn"
                android:layout_width="80dip"
                android:layout_height="30dip"
                android:background="@drawable/btn_sm_green_outline"
                android:gravity="center"
                android:focusable="false"
                android:text="@string/buy"
                android:textColor="@color/main_bg_color"
                android:textSize="18sp" />

            <Button
                android:id="@+id/addShopCarBtn"
                android:layout_width="120dip"
                android:layout_height="30dip"
                android:focusable="false"
                android:layout_marginStart="10dip"
                android:background="@drawable/btn_md_green_outline"
                android:gravity="center"
                android:text="@string/add_shop_car"
                android:textColor="@color/main_bg_color"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>